tests/files/lexer_tests/should_fail/019.cmdr
// Illegal character in string (ascii 19)
var = '';